Fixed button and alignment

--- a/static/signin.css
+++ b/static/signin.css
@@ -13,6 +13,11 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
+
+.form-signin-heading{
+  text-align: center;
+}
+
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
